# nextcloud-notes-mcp-server

./: .gitignore  LICENSE  README.md  env_sample  pyproject.toml
nextcloud_notes_mcp/: server.py
